upload portion btn alignment fixed

--- a/fb/static/css/logged.css
+++ b/fb/static/css/logged.css
@@ -264,16 +264,20 @@ padding-top: 15px;
 display: flex;
 list-style: none;
 margin: 0;
+padding-left: 6rem;
 }
 .navigation ul li a{
 	color: #B0B3B8;
 	border: none;
 	width: 216px;
 	height: 40px;
-	display: block;
+	display: flex;
 	text-align: center;
 }
-
+.navigation ul li a span{
+	padding-right: 10px;
+	padding-top: 4px;
+}
 .navigation ul li a:hover{
 	background-color:#3A3B3C ;
 }
